<resources>
    <string name="app_name">觅觅</string>

    <string name="no_network">当前没有网络</string>
    <string name="ensure">确定</string>
    <string name="dismiss">取消</string>
    <string name="exit">再按一次退出</string>

    <!--Login and Register pages-->
    <string name="mobile_phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="forget_password">忘了密码?</string>
    <string name="find_back_password">找回密码</string>
    <string name="student_id">学号</string>
    <string name="nickname">昵称</string>
    <string name="next_step">下一步</string>
    <string name="finish_register">注册完成</string>
    <string name="finish">完成</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="new_password">新密码</string>
    <string name="back">返回</string>

    <string name="none_user_phone">未输入手机号</string>
    <string name="none_user_password">未输入密码</string>
    <string name="none_user_code">未输入验证码</string>
    <string name="error_user_code">验证码错误</string>
    <string name="error_user_phone">手机号格式错误</string>
    <string name="error_user_password">密码格式错误</string>

    <!--Display page -->
    <string name="display_show_events">花园</string>
    <string name="display_classification">分类</string>
    <string name="loading_more">加载更多......</string>


    <!--Detail page-->
    <string name="has_applied">已申请</string>
    <string name="has_joined">已加入</string>
    <string name="start_time">开始时间</string>
    <string name="sign_up_util">报名截止</string>
    <string name="place_for_activity">活动地点</string>
    <string name="required_num_people">人数要求</string>
    <string name="cost_data">费用说明</string>
    <string name="for_free">免费</string>
    <string name="cost_a_lot">付费</string>
    <string name="starter">发起者</string>
    <string name="ratio_of_like">好评度</string>
    <string name="wanna_join">我要加入</string>
    <string name="ask_question">提问</string>
    <string name="comment">评论</string>
    <string name="joiner">参与者</string>
    <string name="reply">回复</string>
    <string name="wanna_comment_sth">说点什么？</string>
    <string name="wanna_ask_sth">向发起者提问？</string>

    <!--DatePickDialog Strings-->
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <!--ImageChooseDialog Strings-->
    <string name="gallery">系统图库</string>
    <string name="take_photo">拍照</string>
    <string name="phone_album">手机相册</string>

    <!--postEventActivity Strings-->
    <string name="post">发布</string>

    <!--userCenter Strings-->
    <string name="user_center">个人中心</string>
    
    <!--myEventList Strings-->
    <string name="launch_activity">发起的活动</string>
    <string name="modify_activity">修改活动</string>
    <string name="inspect_user">查看报名用户</string>
    <string name="activity_finish">活动已结束</string>
    <string name="grade">评分</string>



</resources>
