<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/bg_pic_dialog">

    <LinearLayout
        android:layout_marginTop="@dimen/image_choose_dialog_margin"
        android:layout_marginBottom="@dimen/image_choose_dialog_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/image_choose_dialog_system_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_gallery"
            android:drawablePadding="@dimen/image_choose_dialog_text_margin_top"
            android:gravity="center"
            android:text="@string/gallery"/>

        <TextView
            android:id="@id/image_choose_dialog_take_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_take_photo"
            android:drawablePadding="@dimen/image_choose_dialog_text_margin_top"
            android:gravity="center"
            android:text="@string/take_photo"/>

        <TextView
            android:id="@id/image_choose_dialog_phone_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_phone_album"
            android:drawablePadding="@dimen/image_choose_dialog_text_margin_top"
            android:gravity="center"
            android:text="@string/phone_album"/>


    </LinearLayout>

    <ImageButton
        android:layout_marginBottom="@dimen/image_choose_dialog_margin"
        android:background="@mipmap/img_pic_dialog_cancel"
        android:id="@id/image_choose_dialog_canal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>